set java version to 10 and changed lombok version from 1.16.22 to 1.18.2